--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -1,6 +1,10 @@
 .auth__main{
     align-items: center;
-    background-color: $primary;
+    // background-color: $primary;
+    background: #12c2e9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     display: flex;
     justify-content: center;
     margin: 0px;
@@ -13,7 +17,7 @@
     box-shadow:  0px 3px $dark-grey;
     border-radius: 2px;
     padding: 20px;
-    width: 250px;
+    width: 600px;  
 }
 
 .auth__title{
