Se agrego JournalEntries

--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -37,3 +37,9 @@
         color: darken($color: white, $amount: 20);
     }
 }
+
+.journal__entries{
+    margin-top: 30px;
+    flex: 1 1 auto;
+    overflow: scroll;
+}
